fixed css some more, weird black overlay i forgot to remove

--- a/backend/templates/ai_fridge.html
+++ b/backend/templates/ai_fridge.html
@@ -99,7 +99,7 @@
 
             scanResult.replaceChildren(wrap);
 
-            scanResult.classList.add('as-modal');
+            scanResult.classList.add('as-embed');
 
             document.getElementById("addManualBtn").onclick = () => {
             const inp = document.getElementById("manualItem");
